# robot-policy-gpu-optimization

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-gpu.txt
configs/: act_aloha.yaml  smolvla_so101.yaml
docs/: PATH_B_PLAN.md  PATH_B_STATUS.md  PLAN.md  make_latency_chart.py  writeup.md
evals/: test_accuracy_regression.py
kernels/: bench.py  reference.py  test_parity.py
kernels/csrc/: layernorm.cpp  layernorm_kernel.cu
profiling/: README.md  run_nsight.sh
scripts/: download_dataset.py  offline_policy_check.py  runpod_setup.sh  runpod_smolvla.sh
src/robopolicy/: __init__.py  eval.py  fused_ops.py  profile_step.py  train.py  utils.py
src/robopolicy/data/: __init__.py  cache.py  dataset.py
src/robopolicy/model/: __init__.py  act.py  backbone.py  transformer.py
src/robopolicy/realbot/: __init__.py  agent.py  config.py  detect_cameras.py  record_runbook.md  run_policy.py  voice.py
tests/: test_act.py  test_transformer.py  test_voice_parsing.py
