[project]
name = "robopolicy"
version = "0.1.0"
description = "A transformer robot-arm policy built from scratch in PyTorch, accelerated with a custom CUDA kernel."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.2",
    "torchvision>=0.17",
    "numpy>=1.24",
    "einops>=0.7",
    "pyyaml>=6.0",
    "tqdm>=4.66",
]

[project.optional-dependencies]
# Heavy deps only needed to actually load LeRobot data / run sim eval.
# Install with:  pip install -e ".[data]"
data = [
    # `[dataset]` pulls HuggingFace `datasets` (an optional extra since lerobot 0.6).
    "lerobot[dataset]>=0.6",
    "gym-aloha>=0.1",
    # PyAV video backend for decoding frames (avoids the torchcodec/FFmpeg ABI issues).
    "av>=12",
]
dev = [
    "pytest>=8.0",
]
# Path B (physical SO-101). Mac-side inference + voice front-end.
# Install on the M3 Mac with:  pip install -e ".[realbot]"
#   - lerobot[smolvla,feetech]: SmolVLA policy + Feetech STS motor bus (SO-101).
#   - mlx-whisper: Apple-Silicon-native Whisper (Metal) for the voice layer.
#   - sounddevice: mic capture. opencv-python: camera capture for detect_cameras.
# NOTE: verify the exact lerobot extra names against the installed version (§12).
realbot = [
    "lerobot[smolvla,feetech]>=0.6",
    "mlx-whisper>=0.4",
    "sounddevice>=0.4",
    "opencv-python>=4.9",
]
# RunPod / CUDA training box for SmolVLA fine-tuning.
# Install on the pod with:  pip install -e ".[smolvla]"   (see scripts/runpod_smolvla.sh)
smolvla = [
    "lerobot[smolvla]>=0.6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests", "kernels", "evals"]
addopts = "-q"
